# MIT

./: .gitignore  CMakeLists.txt
benchmark/cube_benchmark/: CMakeLists.txt  cube_plot_results.m
benchmark/cube_benchmark/input_files/: cube_benchmark.prm  cube_benchmark1.prm  cube_benchmark3.prm  cube_benchmark_lowsigma.prm
benchmark/cube_benchmark/src/: cube_benchmark.cc
benchmark/poisson_test/: CMakeLists.txt
benchmark/poisson_test/src/: poisson_test.cc
benchmark/polynomial/: CMakeLists.txt  run_all_tests.sh  wave_plot_results.m
benchmark/polynomial/src/: polynomial_benchmark.cc
benchmark/raviartthomas_test/: CMakeLists.txt  run_all.sh
benchmark/raviartthomas_test/src/: old_rt_test.cc  rt_test.cc
benchmark/sphere_benchmark/: CMakeLists.txt  check_fields.m  geometry_error_plots.m  quick_mapping_compare.m  sphere_plot_oldfiles.m  sphere_plot_results.m
benchmark/sphere_benchmark/input_files/: sphere_benchmark.prm  sphere_benchmark1.prm  sphere_benchmark2.prm  (+3 more)
benchmark/waveprop_benchmark/: CMakeLists.txt
benchmark/waveprop_benchmark2/: CMakeLists.txt
include/: all_data.h  backgroundfield.h  curlfunction.h  forwardsolver.h  inputtools.h  inversesolver.h  mydofrenumbering.h  myfe_nedelec.h  mynedelec_tools.h  mypolynomials.h  mypreconditioner.h  myvectortools.h  outputtools.h  voltage.h
inverse/: CMakeLists.txt
src/: all_data.cc  backgroundfield.cc  curlfunction.cc  forwardsolver.cc  inputtools.cc  inversesolver.cc  mydofrenumbering.cc  mypreconditioner.cc  myvectortools.cc  outputtools.cc  voltage.cc
voltage_only/: CMakeLists.txt
(+13 files in other folders)
